--- a/css/estilos.css
+++ b/css/estilos.css
@@ -113,7 +113,7 @@ nav a:hover {
 }
 
 #features{
-    background: url(../img/bg-features.png);
+    background: url(../img/index/bg-features.png);
     color: white;
     padding-top: 1rem;
 }
@@ -209,7 +209,7 @@ nav a:hover {
     flex-wrap: wrap;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     color: var(--blanco);
     
 }
@@ -384,6 +384,6 @@ nav a:hover {
         }
     }
 
-    /*Resolución notebooks*/
+    /*Resolución notebooks*/  
 @media screen and (min-width: 1308px){
 }
