--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Marcellus&amp;family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&amp;display=swap');
+@import
+url('https://fonts.googleapis.com/css2?family=Marcellus&amp;family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&amp;display=swap');
 :root{
     
   --azulclaro: #48D6ED;
@@ -24,7 +25,7 @@
 body {
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
-    background-image: url(../img/fondo-dash.jpg);
+    background-image: url(../img/ciudad.png);
     background-repeat: no-repeat;
     background-size: cover;
     margin-left: 80px;
@@ -91,9 +92,9 @@ h1,h2,h3,h4,h5 {
 
 
 .options_menu{
-    padding: 20px 20px;
     position: absolute;
-    top: 10%px;
+    top: 23%;
+    width: 100%;
     font-size: 18px;
     height: 100%;
     z-index: 300;
@@ -112,7 +113,7 @@ h1,h2,h3,h4,h5 {
 }
 
 .options_menu a:hover{
-    color: #0B3860;
+    background-color: var(--azuloscuro);
 }
 
 .options_menu .opcion{
@@ -135,6 +136,10 @@ h1,h2,h3,h4,h5 {
 
 .options_menu #exit{
     margin-top: 70%;
+}
+
+.opcion{
+    margin-left: 21px;
 }
 
 a.seleccion{
@@ -180,6 +185,27 @@ h2{
     font-size: 23px;
 }
 
+.download{
+    display: flex;
+    margin: auto;
+    justify-content: center;
+    align-items: center;
+    width: 130px;
+    height: 35px;
+    margin-top: 8px;
+    background: var(--azuloscuro);
+}
+
+#icon-1{
+    display: none;
+}
+
+.download i{
+ 
+    color: var(--blanco);
+    font-size: 25px;
+}
+
 img{
     display: flex;
     margin: auto;
@@ -216,6 +242,19 @@ img{
             "column-1 column-2 column-3" 65%
             "column-1 footer footer"  25%/
              20% 40% 40%; 
+    }
+
+    img{
+        width: 150px;
+    }
+
+    .download{
+        width: 150px;
+        gap: 30px;
+    }
+
+    #icon-1{
+        display: flex;
     }
 
     .titulo{
