--- a/css/estilos.css
+++ b/css/estilos.css
@@ -69,7 +69,9 @@ nav a:hover {
 .logo i{
     color: var(--blanco);
     font-size: 2rem;
+    
 }
+
 
 .logo img{
     width: 40%;
@@ -81,13 +83,22 @@ nav a:hover {
     grid-area: menu;
     display: grid;
     background-color: rgb(1, 10, 52, 0.838);
+
+    
     /*display: none;*/
+}
+.nav_input:checked + .menu{
+    clip-path: circle(100% at center);
+}
+.nav_input{
+    display: none;
 }
 
 .menu-hr{
     width: 90%;
     background-color: var(--blanco);
     justify-self: center;
+    
 }
 
 .item{
